# deepgene

./: README.md
.github/workflows/: deploy.yml
js/: .gitignore  README.md  index.html  package-lock.json  package.json
js/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
js/src/components/: LookupForm.test.tsx  LookupForm.tsx  ResultDisplay.test.tsx  ResultDisplay.tsx
js/src/lib/: gene_data.test.ts  gene_data.ts  gene_lookup.test.ts  gene_lookup.ts  gene_parser.test.ts  gene_parser.ts  literature_fetcher.test.ts  literature_fetcher.ts  mutant_extractor.ts
js/src/test/: setup.ts
py/: README.md  pyproject.toml
py/deepgene/: __init__.py  gene_data.py  gene_lookup.py  gene_parser.py  literature_fetcher.py  main.py  mutant_extractor.py  shell.py
py/tests/: test_gene_data.py  test_gene_lookup.py  test_gene_parser.py  test_literature_fetcher.py  test_mutant_extractor.py  test_shell.py
